--- a/docs/fhatos.adoc
+++ b/docs/fhatos.adoc
@@ -85,12 +85,12 @@ $ fhatos --boot:config=../conf/boot-loader.obj
     fhatos-0.1-alpha > linux-6.8.0-59-generic > x86_64
        [x86_64]
       .oO mounting kernel structures Oo.
-[INFO]  main [total=>11386880,free=>11385440,used=>0.01265]
+[INFO]  main [total=>11399168,free=>11397696,used=>0.01291]
 [INFO]  [/sys/router/] router started
 [INFO]  [/sys/router/] heap <none> spanning /sys/# mounted
 [INFO]  [/sys/router/] heap /mnt/mnt spanning /mnt/# mounted
 [INFO]  [/sys/router/] heap /mnt/boot spanning /boot/# mounted
-[INFO]  [/mmadt/rec] boot working directory: /home/killswitch/software/fhatos/build/docs/build
+[INFO]  [/sys/router/] boot working directory: /home/killswitch/software/fhatos/build/docs/build
 [INFO]  [/sys/router/] /home/killswitch/software/fhatos/build/docs/build/data/boot/boot_config.obj boot loader native location
 [WARN]  [/sys/router/] no mounted structure for heap  
 [WARN]  [/sys/router/] no mounted structure for fs  
@@ -157,7 +157,7 @@ $ fhatos --boot:config=../conf/boot-loader.obj
      main=>main()[start({heap[[pattern=>+/#]]@/mnt/var}).end().start({fs[[pattern=>/fs/#,config=>[root=>/fs]]]@/mnt/fs}).end().mount(at(/mnt/var)).end().mount(at(/mnt/fs)).end().start({log[[=>]]@/io/log}).end().start({terminal[[=>]]@/io/terminal}).end().start({console[[=>]]@/io/console}).end().start({/io/console/config/stack_size}).ref(259072).end().start({button[[pin=>gpio[5],on_push=>lift(print('button pushed'))]]@/io/z}).end().spawn(at(/io/console)).end().bundle(at(/io/z)).end()]
    ]@/boot/config
       .oO configuring kernel objs Oo.
-[INFO]  [/sys/mem] main [total=>11927552,free=>11925824,used=>0.01449]
+[INFO]  [/sys/mem] main [total=>11939840,free=>11937984,used=>0.01554]
 [INFO]  [/sys/router/] router configured
             [id=>/sys/router,config=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/mmadt/ext/,/fos/,/fos/sys/,/fos/s/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/]]]
 [INFO]  [/boot/config] router boot config dropped
@@ -167,27 +167,24 @@ $ fhatos --boot:config=../conf/boot-loader.obj
 [INFO]  [/boot/config] scheduler boot config dropped
 [INFO]  [/sys/router/] heap /mnt/fos spanning /fos/# mounted
 [INFO]  [/sys/router/] heap /mnt/mmadt spanning /mmadt/# mounted
-[INFO]  [/sys/typer] /sys/typer/module/fos/qproc type defined
-[INFO]  [/sys/typer] /sys/typer/module/fos/io/gpio type defined
+[INFO]  [/sys/typer] typer started
 [INFO]  [/sys/typer] /sys/typer/module/mmadt/base type defined
 [INFO]  [/sys/typer] /sys/typer/module/mmadt/ext type defined
 [INFO]  [/sys/typer] typer configured
             [id=>/sys/typer,config=>[module=>[/mmadt/#,/fos/#]]]
 [INFO]  [/boot/config] typer boot config dropped
       .oO mounting fos/mmadt structures Oo.
-[INFO]  [/sys/mem] main [total=>12468224,free=>12466336,used=>0.01514]
+[INFO]  [/sys/mem] main [total=>12480512,free=>12478496,used=>0.01615]
 [INFO]  [/sys/router/] heap /mnt/io spanning /io/# mounted
       .oO importing fos/mmadt types Oo.
-[INFO]  [/sys/mem] main [total=>12468224,free=>12466336,used=>0.01514]
-[WARN]  [/sys/typer] /sys/typer/module/fos/qproc type qproc?rec<=obj{?}()[cpp] overwritten
-[WARN]  [/sys/typer] /sys/typer/module/fos/io/gpio type gpio?rec<=obj{?}()[cpp] overwritten
+[INFO]  [/sys/mem] main [total=>12480512,free=>12478496,used=>0.01615]
 [INFO]  [/sys/typer] /sys/typer/module/mmadt/base type defined
 [INFO]  [/sys/typer] /sys/typer/module/mmadt/ext type defined
 [INFO]  [/sys/typer] /mmadt/proc type defined
 [INFO]  [/sys/typer] /mmadt/proc/::/eval type defined
 [INFO]  [/sys/router/] /io/parser obj loaded
       .oO evaluating main inst Oo.
-[INFO]  [/sys/mem] main [total=>12603392,free=>12601440,used=>0.01549]
+[INFO]  [/sys/mem] main [total=>12615680,free=>12613632,used=>0.01624]
 [INFO]  [/boot/config] exiting boot state: stricter type checking enabled
 [INFO]  [/boot/config] applying main inst
             main()[start({heap[[pattern=>+/#]]@/mnt/var}).end().start({fs[[pattern=>/fs/#,config=>[root=>/fs]]]@/mnt/fs}).end().mount(at(/mnt/var)).end().mount(at(/mnt/fs)).end().start({log[[=>]]@/io/log}).end().start({terminal[[=>]]@/io/terminal}).end().start({console[[=>]]@/io/console}).end().start({/io/console/config/stack_size}).ref(259072).end().start({button[[pin=>gpio[5],on_push=>lift(print('button pushed'))]]@/io/z}).end().spawn(at(/io/console)).end().bundle(at(/io/z)).end()]
@@ -196,7 +193,8 @@ $ fhatos --boot:config=../conf/boot-loader.obj
 [INFO]  [/sys/router/] fs /mnt/fs spanning /fs/# mounted
 [INFO]  [/sys/scheduler] /io/console thread spawned
 [INFO]  [/sys/scheduler] /io/z fiber bundled
-[INFO]  [/sys/mem] main [total=>88375296,free=>88373216,used=>0.00235]
+[INFO]  [/sys/mem] main [total=>88387584,free=>88385408,used=>0.00246]
+[INFO]  [/boot/config] boot time: 0.086309969 seconds
 
 ----
 
@@ -248,8 +246,10 @@ The [.h]#scheduler# controls and provides access to the various *processes* that
 fhatos> */sys/scheduler
 >[
 ==>spawn=>[
+===>/io/console
 =>]
 ==>bundle=>[
+===>/io/z
 =>]
 ==>config=>[
 ===>id=>/sys/scheduler
@@ -536,7 +536,8 @@ A [yellow]#f#​[fuchsia]#h#​[aqua]*A*​[lime]*T*​[red]*O*​[blue]#s#​ i
 [source,mmadt]
 ----
 fhatos> # -> noobj
-[INFO]  [/sys/router/] 6 heap(s) closing
+[INFO]  [/sys/router/] 1 fs(s) closing
+[INFO]  [/sys/router/] 7 heap(s) closing
 [INFO]  [/sys/router/] router /sys/router/ stopped
 [ERROR] [/mnt/io] unable to read /io/console/config/nest
 [ERROR] [/mnt/io] unable to read /io/console/config/terminal/stdout
@@ -545,6 +546,8 @@ fhatos> # -> noobj
 [INFO]  [/sys/router/] /fos/# heap detached
 [INFO]  [/sys/router/] /mmadt/# heap detached
 [INFO]  [/sys/router/] /io/# heap detached
+[INFO]  [/sys/router/] +/# heap detached
+[INFO]  [/sys/router/] /fs/# fs detached
 ----
 
 ++++
@@ -888,14 +891,11 @@ fhatos> *char
 fhatos> --- char['a']@a
 fhatos> --- char['b']@b
 fhatos> @a + @b
-[ERROR] [/sys/router/] no mounted structure for a  
 [ERROR] [ /mmadt/obj ]  /mmadt/plus inst unresolved 
 	         lhs id      inst id        resolve obj        
 	  ->[/mmadt/obj] /mmadt/plus => plus(_)
 fhatos> *a
-[ERROR] [/sys/router/] no mounted structure for a  
 fhatos> @a.as(str) + @b
-[ERROR] [/sys/router/] no mounted structure for a  
 [ERROR] [/mmadt/parser] noobj is not a /mmadt/str as defined by [str][_] 
 		 \_/mmadt/str is not a subtype of /mmadt/str
 	  thrown at inst noobj => as?obj{?}<=obj{?}(type?uri=>str)[cpp] [type=>str]
@@ -932,27 +932,15 @@ fhatos> nat[-30]
 [ERROR] [/mmadt/parser] -30 is not a nat as defined by nat()[is(gte(0))] 
 		 \_nat[-30] is not applicable with /mmadt/ext/nat?dom=/mmadt/int&dc=1,1&rng=/mmadt/int&rc=1,1
 fhatos> nat[12]@a
-[ERROR] [/sys/router/] no mounted structure for a/is  
-[ERROR] [/sys/router/] no mounted structure for a/::/mmadt/is  
-[ERROR] [/sys/router/] no mounted structure for a/::/mmadt/is  
-[ERROR] [/sys/router/] no mounted structure for a/gte  
-[ERROR] [/sys/router/] no mounted structure for a/::/mmadt/gte  
-[ERROR] [/sys/router/] no mounted structure for a/::/mmadt/gte  
-[ERROR] [/sys/router/] no mounted structure for a  
-[ERROR] [/sys/router/] no mounted structure for a/config/stack_size  
 ==>nat[12]@a
 fhatos> @a.minus(11)
-[ERROR] [/sys/router/] no mounted structure for a  
-[ERROR] [ /mmadt/obj ]  /mmadt/minus inst unresolved 
-	         lhs id      inst id         resolve obj         
-	  ->[/mmadt/obj] /mmadt/minus => minus(_)
+==>nat[1]@a
 fhatos> @a.minus(2)
-[ERROR] [/sys/router/] no mounted structure for a  
-[ERROR] [ /mmadt/obj ]  /mmadt/minus inst unresolved 
-	         lhs id      inst id         resolve obj         
-	  ->[/mmadt/obj] /mmadt/minus => minus(_)
+[ERROR] [/mmadt/parser] -1@a is not a nat as defined by nat()[is(gte(0))] 
+		 \_nat[-1]@a is not applicable with /mmadt/ext/nat?dom=/mmadt/int&dc=1,1&rng=/mmadt/int&rc=1,1
+	  thrown at inst nat[1]@a => minus(0?int=>2)[cpp] [0=>2]
 fhatos> *a
-[ERROR] [/sys/router/] no mounted structure for a  
+==>nat[1]@a
 ----
 
 ++++
@@ -1046,27 +1034,11 @@ band -> |band?int{?}<=int(_,_)[is(and([gte(*<0>),lte(*<1>)]))]
 [source,mmadt]
 ----
 fhatos> band -> |band?int{?}<=int(_,_)[is(and([gte(*<0>),lte(*<1>)]))]
-[ERROR] [/sys/router/] no mounted structure for band/::/mmadt/block?dom=/mmadt/int&dc=1,1&rng=/mmadt/int&rc=0,1  
-[ERROR] [/sys/router/] no mounted structure for band/::/mmadt/block?dom=/mmadt/int&dc=1,1&rng=/mmadt/int&rc=0,1  
-[ERROR] [/sys/router/] no mounted structure for band  
 ==>band?int{?}<=int(_,_)
 	[is(and([gte(from(0)),lte(from(1))]))]
 fhatos> 3.band(2,8)                                // <1>
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [ /mmadt/int ]  band inst unresolved 
-	         lhs id  inst id    resolve obj
+==>3
 fhatos> 10.band(2,8)                               // <2>
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [ /mmadt/int ]  band inst unresolved 
-	         lhs id  inst id    resolve obj
 ----
 
 ++++
@@ -1101,35 +1073,16 @@ band -> |band?int{?}<=int(min=>_,max=>_)[is(and([gte(*min),lte(*max)]))]
 [source,mmadt]
 ----
 fhatos> band -> |band?int{?}<=int(min=>_,max=>_)[is(and([gte(*min),lte(*max)]))]
-[ERROR] [/sys/router/] no mounted structure for band/::/mmadt/block?dom=/mmadt/int&dc=1,1&rng=/mmadt/int&rc=0,1  
-[ERROR] [/sys/router/] no mounted structure for band/::/mmadt/block?dom=/mmadt/int&dc=1,1&rng=/mmadt/int&rc=0,1  
-[ERROR] [/sys/router/] no mounted structure for band  
 ==>band?int{?}<=int(min=>_,max=>_)
 	[is(and([gte(from(min)),lte(from(max))]))]
 fhatos> 3.band(2,8)                           // <1>
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [ /mmadt/int ]  band inst unresolved 
-	         lhs id  inst id    resolve obj
+==>3
 fhatos> 3.band(max=>8,min=>2)                 // <2>
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [ /mmadt/int ]  band inst unresolved 
-	         lhs id  inst id    resolve obj
+==>3
 fhatos> 'abc'.band(2,8)                       // <3>
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [ /mmadt/str ]  band inst unresolved 
-	         lhs id  inst id    resolve obj
+[ERROR] [/mmadt/parser] 2 is not a str as defined by [str][_] 
+		 \_/mmadt/int is not a subtype of /mmadt/str
+	  thrown at inst 'abc' => band?int{?}<=int(min=>2,max=>8)[is(and([gte(from(min)),lte(from(max))]))] [min=>2,max=>8]
 ----
 
 ++++
@@ -1167,35 +1120,14 @@ band -> |band?int{?}<=int(min=>else(2),max=>else(8))[is(and([gte(*min),lte(*max)
 [source,mmadt]
 ----
 fhatos> band -> |band?int{?}<=int(min=>else(2),max=>else(8))[is(and([gte(*min),lte(*max)]))]
-[ERROR] [/sys/router/] no mounted structure for band/::/mmadt/block?dom=/mmadt/int&dc=1,1&rng=/mmadt/int&rc=0,1  
-[ERROR] [/sys/router/] no mounted structure for band/::/mmadt/block?dom=/mmadt/int&dc=1,1&rng=/mmadt/int&rc=0,1  
-[ERROR] [/sys/router/] no mounted structure for band  
 ==>band?int{?}<=int(min=>else?noobj<=obj(2)[noobj],max=>else?noobj<=obj(8)[noobj])
 	[is(and([gte(from(min)),lte(from(max))]))]
 fhatos> 1.band(min=>1)                        // <1>
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [ /mmadt/int ]  band inst unresolved 
-	         lhs id  inst id    resolve obj
+==>1
 fhatos> 10.band()                             // <2>
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [ /mmadt/int ]  band inst unresolved 
-	         lhs id  inst id    resolve obj
 fhatos> {2,3,4,5}.band(min=>3,max=>4)         // <3>
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [ /mmadt/int ]  band inst unresolved 
-	         lhs id  inst id    resolve obj
+==>3
+==>4
 ----
 
 ++++
@@ -1231,27 +1163,13 @@ band -> |band?int{?}<=int(min?nat=>else(2),max?nat=>else(8))[is(and([gte(*min),l
 [source,mmadt]
 ----
 fhatos> band -> |band?int{?}<=int(min?nat=>else(2),max?nat=>else(8))[is(and([gte(*min),lte(*max)]))]
-[ERROR] [/sys/router/] no mounted structure for band/::/mmadt/block?dom=/mmadt/int&dc=1,1&rng=/mmadt/int&rc=0,1  
-[ERROR] [/sys/router/] no mounted structure for band/::/mmadt/block?dom=/mmadt/int&dc=1,1&rng=/mmadt/int&rc=0,1  
-[ERROR] [/sys/router/] no mounted structure for band  
 ==>band?int{?}<=int(min?nat=>else?noobj<=obj(2)[noobj],max?nat=>else?noobj<=obj(8)[noobj])
 	[is(and([gte(from(min)),lte(from(max))]))]
 fhatos> 15.band(10,20)              // <1>
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [ /mmadt/int ]  band inst unresolved 
-	         lhs id  inst id    resolve obj
+==>15
 fhatos> -15.band(-20,-10)           // <2>
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [ /mmadt/int ]  band inst unresolved 
-	         lhs id  inst id    resolve obj
+[ERROR] [/mmadt/parser] -20 is not a nat as defined by nat()[is(gte(0))] 
+		 \_-20 is not applicable with /mmadt/ext/nat?dom=/mmadt/int&dc=1,1&rng=/mmadt/int&rc=1,1
 ----
 
 ++++
@@ -1296,7 +1214,6 @@ fhatos> 10.(min=>2,max=>8)[is(and([gte(*min),lte(*max)]))]                // <1>
 fhatos> 10.(min=>minus(1),max=>plus(1))[is(and([gte(*min),lte(*max)]))]   // <2>
 ==>10
 fhatos> 10.()[is(and([gte(*min),lte(*max)]))]                             // <3>
-[ERROR] [/sys/router/] no mounted structure for min  
 [ERROR] [/mmadt/parser] noobj is not a int as defined by [int][_] 
 		 \_/mmadt/noobj is not a subtype of /mmadt/int
 	  thrown at inst 10 => ()[is(and([gte(from(min)),lte(from(max))]))] [=>]
@@ -1333,26 +1250,12 @@ is_divisible -> |is_divisble?bool<=int(by?int=>_)[mod(*by).eq(0)]
 [source,mmadt]
 ----
 fhatos> is_divisible -> |is_divisble?bool<=int(by?int=>_)[mod(*by).eq(0)]
-[ERROR] [/sys/router/] no mounted structure for is_divisble/::/mmadt/block?dom=/mmadt/int&dc=1,1&rng=/mmadt/bool&rc=1,1  
-[ERROR] [/sys/router/] no mounted structure for is_divisble/::/mmadt/block?dom=/mmadt/int&dc=1,1&rng=/mmadt/bool&rc=1,1  
-[ERROR] [/sys/router/] no mounted structure for is_divisible  
 ==>is_divisble?bool<=int(by?int=>_)[mod(from(by)).eq(0)]
 fhatos> 10.is_divisible(2)
-[ERROR] [/sys/router/] no mounted structure for is_divisible  
-[ERROR] [/sys/router/] no mounted structure for is_divisible  
-[ERROR] [/sys/router/] no mounted structure for is_divisible  
-[ERROR] [/sys/router/] no mounted structure for is_divisible  
-[ERROR] [/sys/router/] no mounted structure for is_divisible  
-[ERROR] [ /mmadt/int ]  is_divisible inst unresolved 
-	         lhs id  inst id    resolve obj
+==>true
 fhatos> 10.is_divisible('abc')
-[ERROR] [/sys/router/] no mounted structure for is_divisible  
-[ERROR] [/sys/router/] no mounted structure for is_divisible  
-[ERROR] [/sys/router/] no mounted structure for is_divisible  
-[ERROR] [/sys/router/] no mounted structure for is_divisible  
-[ERROR] [/sys/router/] no mounted structure for is_divisible  
-[ERROR] [ /mmadt/int ]  is_divisible inst unresolved 
-	         lhs id  inst id    resolve obj
+[ERROR] [/mmadt/parser] 'abc' is not a int as defined by [int][_] 
+		 \_/mmadt/str is not a subtype of /mmadt/int
 ----
 
 ++++
@@ -1382,19 +1285,11 @@ band -> |band?int{?}<=int(min=>_,max=>is(gt(*min)).else(*min.plus(1)))[is(gte(*m
 [source,mmadt]
 ----
 fhatos> band -> |band?int{?}<=int(min=>_,max=>is(gt(*min)).else(*min.plus(1)))[is(gte(*min)).is(lte(*max))]
-[ERROR] [/sys/router/] no mounted structure for band/::/mmadt/block?dom=/mmadt/int&dc=1,1&rng=/mmadt/int&rc=0,1  
-[ERROR] [/sys/router/] no mounted structure for band/::/mmadt/block?dom=/mmadt/int&dc=1,1&rng=/mmadt/int&rc=0,1  
-[ERROR] [/sys/router/] no mounted structure for band  
 ==>band?int{?}<=int(min=>_,max=>is?noobj<=obj(gt?noobj<=obj(from?noobj<=obj(min)[noobj])[noobj])[noobj].else?noobj<=obj(from?noobj<=obj(min)[noobj].plus?noobj<=obj(1)[noobj])[noobj])
 	[is(gte(from(min))).is(lte(from(max)))]
 fhatos> 2.band(min=>1,max=>1)                 // <1>
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [/sys/router/] no mounted structure for band  
-[ERROR] [ /mmadt/int ]  band inst unresolved 
-	         lhs id  inst id    resolve obj
+[ERROR] [/mmadt/parser] noobj is not a int as defined by [int][_] 
+		 \_/mmadt/noobj is not a subtype of /mmadt/int
 ----
 
 ++++
@@ -1420,26 +1315,12 @@ is_divisible -> |is_divisble?bool<=int(by?int=>is(neq(0)).else(print('error').ma
 [source,mmadt]
 ----
 fhatos> is_divisible -> |is_divisble?bool<=int(by?int=>is(neq(0)).else(print('error').map(1)))[mod(*by).eq(0)]
-[ERROR] [/sys/router/] no mounted structure for is_divisble/::/mmadt/block?dom=/mmadt/int&dc=1,1&rng=/mmadt/bool&rc=1,1  
-[ERROR] [/sys/router/] no mounted structure for is_divisble/::/mmadt/block?dom=/mmadt/int&dc=1,1&rng=/mmadt/bool&rc=1,1  
-[ERROR] [/sys/router/] no mounted structure for is_divisible  
 ==>is_divisble?bool<=int(by?int=>is?noobj<=obj(neq?noobj<=obj(0)[noobj])[noobj].else?noobj<=obj(print?noobj<=obj('error')[noobj].map?noobj<=obj(1)[noobj])[noobj])[mod(from(by)).eq(0)]
 fhatos> 10.is_divisible(2)
-[ERROR] [/sys/router/] no mounted structure for is_divisible  
-[ERROR] [/sys/router/] no mounted structure for is_divisible  
-[ERROR] [/sys/router/] no mounted structure for is_divisible  
-[ERROR] [/sys/router/] no mounted structure for is_divisible  
-[ERROR] [/sys/router/] no mounted structure for is_divisible  
-[ERROR] [ /mmadt/int ]  is_divisible inst unresolved 
-	         lhs id  inst id    resolve obj
+error==>true
 fhatos> 10.is_divisible('abc')
-[ERROR] [/sys/router/] no mounted structure for is_divisible  
-[ERROR] [/sys/router/] no mounted structure for is_divisible  
-[ERROR] [/sys/router/] no mounted structure for is_divisible  
-[ERROR] [/sys/router/] no mounted structure for is_divisible  
-[ERROR] [/sys/router/] no mounted structure for is_divisible  
-[ERROR] [ /mmadt/int ]  is_divisible inst unresolved 
-	         lhs id  inst id    resolve obj
+error[ERROR] [/mmadt/parser] 'abc' is not a int as defined by [int][_] 
+		 \_/mmadt/str is not a subtype of /mmadt/int
 ----
 
 ++++
@@ -1516,21 +1397,15 @@ y -> z
 [source,mmadt]
 ----
 fhatos> *y
-[ERROR] [/sys/router/] no mounted structure for y  
 fhatos> *z
-[ERROR] [/sys/router/] no mounted structure for z  
 fhatos> z -> 12
-[ERROR] [/sys/router/] no mounted structure for z  
 ==>12
 fhatos> y -> z
-[ERROR] [/sys/router/] no mounted structure for y  
 ==>z
 fhatos> *y
-[ERROR] [/sys/router/] no mounted structure for y  
+==>z
 fhatos> **y
-[ERROR] [/sys/router/] no mounted structure for y  
-[ERROR] [/mmadt/noobj] noobj accessed as uri
-	  thrown at inst noobj => from?obj{?}<=obj{?}(noobj,noobj)[cpp] [0=>noobj,1=>noobj]
+==>12
 ----
 
 ++++
@@ -1583,24 +1458,17 @@ a -> 12
 [source,mmadt]
 ----
 fhatos> a -> 12
-[ERROR] [/sys/router/] no mounted structure for a  
 ==>12
 fhatos> *a.plus(10)
-[ERROR] [/sys/router/] no mounted structure for a  
-[ERROR] [ /mmadt/obj ]  /mmadt/plus inst unresolved 
-	         lhs id      inst id        resolve obj        
-	  ->[/mmadt/obj] /mmadt/plus => plus(_)
+==>22
 fhatos> *a
-[ERROR] [/sys/router/] no mounted structure for a  
+==>12
 fhatos> @a
-[ERROR] [/sys/router/] no mounted structure for a  
+==>12@a
 fhatos> @a.plus(10)
-[ERROR] [/sys/router/] no mounted structure for a  
-[ERROR] [ /mmadt/obj ]  /mmadt/plus inst unresolved 
-	         lhs id      inst id        resolve obj        
-	  ->[/mmadt/obj] /mmadt/plus => plus(_)
+==>22@a
 fhatos> *a
-[ERROR] [/sys/router/] no mounted structure for a  
+==>22@a
 ----
 
 ++++
@@ -1634,19 +1502,20 @@ a|
 [source,mmadt]
 ----
 fhatos> a?sub -> |to(b)
-[ERROR] [/sys/router/] no mounted structure for a?sub  
 ==>to?noobj<=obj(b)[noobj]
 fhatos> *a?sub
-[ERROR] [/sys/router/] no mounted structure for a?sub  
+>sub[
+==>source=>/sys/scheduler
+==>pattern=>a
+==>on_recv=>to(b)
+>]
 fhatos> *b
-[ERROR] [/sys/router/] no mounted structure for b  
 fhatos> a->12
-[ERROR] [/sys/router/] no mounted structure for a  
 ==>12
 fhatos> *a
-[ERROR] [/sys/router/] no mounted structure for a  
+==>12
 fhatos> *b
-[ERROR] [/sys/router/] no mounted structure for b  
+==>12
 ----
 
 ++++
@@ -1687,24 +1556,17 @@ a -> 'axel'
 [source,mmadt]
 ----
 fhatos> a -> 'axel'
-[ERROR] [/sys/router/] no mounted structure for a  
 ==>'axel'
 fhatos> *a
-[ERROR] [/sys/router/] no mounted structure for a  
+==>'axel'
 fhatos> *a + ' fantaxel'
-[ERROR] [/sys/router/] no mounted structure for a  
-[ERROR] [ /mmadt/obj ]  /mmadt/plus inst unresolved 
-	         lhs id      inst id        resolve obj        
-	  ->[/mmadt/obj] /mmadt/plus => plus(_)
+==>'axel fantaxel'
 fhatos> *a
-[ERROR] [/sys/router/] no mounted structure for a  
+==>'axel'
 fhatos> @a + ' fantaxel'
-[ERROR] [/sys/router/] no mounted structure for a  
-[ERROR] [ /mmadt/obj ]  /mmadt/plus inst unresolved 
-	         lhs id      inst id        resolve obj        
-	  ->[/mmadt/obj] /mmadt/plus => plus(_)
+==>'axel fantaxel'@a
 fhatos> *a
-[ERROR] [/sys/router/] no mounted structure for a  
+==>'axel fantaxel'@a
 ----
 
 ++++
@@ -1735,14 +1597,32 @@ fhatos> thread[[loop=>^(
           plus(1).to(c).
           gt(10).to(t/halt).
           is(_).print('\n'))]]@t
-[ERROR] [/sys/router/] no mounted structure for t  
-[ERROR] [/sys/router/] no mounted structure for t/config/stack_size  
 >thread[
 ==>loop=>lift(from(block(c),0).print('c: {_}').plus(1).to(c).gt(10).to(t/halt).is(_).print('\n'))
 ==>halt=>true
 >]@t
-fhatos> /sys/scheduler::spawn(@t)
-[ERROR] [/sys/router/] no mounted structure for t  
+
+fhatos> fhatos> /sys/scheduler::spawn(@t)
+[INFO]  [/sys/scheduler] t thread spawned
+>thread[
+==>loop=>lift(from(block(c),0).print('c: {_}').plus(1).to(c).gt(10).to(t/halt).is(_).print('\n'))
+==>halt=>false
+>]@t
+[INFO]  [t] [fhatos] thread spawned: from(block(c),0).print('c: {_}').plus(1).to(c).gt(10).to(t/halt).is(_).print('\n') [stack size:noobj]
+c: 0
+c: 1
+c: 2
+c: 3
+c: 4
+c: 5
+c: 6
+c: 7
+c: 8
+c: 9
+c: 10
+fhatos> *c
+[INFO]  [/sys/scheduler] thread t stopped
+==>11
 ----
 
 ++++
@@ -1824,23 +1704,15 @@ fhatos> /sys/router/config/resolve/auto_prefix ->
 	         lhs id      inst id        resolve obj        
 	  ->[/mmadt/obj] /mmadt/plus => plus(_)
 fhatos> a -> int8[126]                       // <2>
-[ERROR] [/sys/router/] no mounted structure for a  
 ==>int8[126]
 fhatos> @a + 1
-[ERROR] [/sys/router/] no mounted structure for a  
-[ERROR] [ /mmadt/obj ]  /mmadt/plus inst unresolved 
-	         lhs id      inst id        resolve obj        
-	  ->[/mmadt/obj] /mmadt/plus => plus(_)
+==>int8[127]@a
 fhatos> @a + 1
-[ERROR] [/sys/router/] no mounted structure for a  
-[ERROR] [ /mmadt/obj ]  /mmadt/plus inst unresolved 
-	         lhs id      inst id        resolve obj        
-	  ->[/mmadt/obj] /mmadt/plus => plus(_)
+==>int8[128]@a
 fhatos> @a + 1                               // <3>
-[ERROR] [/sys/router/] no mounted structure for a  
-[ERROR] [ /mmadt/obj ]  /mmadt/plus inst unresolved 
-	         lhs id      inst id        resolve obj        
-	  ->[/mmadt/obj] /mmadt/plus => plus(_)
+[ERROR] [/mmadt/parser] 129@a is not a /mmadt/ext/int8 as defined by uint8()[is(gte(-127)).is(lte(128))] 
+		 \_int8[129]@a is not applicable with /mmadt/ext/uint8?dom=/mmadt/int&dc=1,1&rng=/mmadt/int&rc=1,1
+	  thrown at inst int8[128]@a => plus(0?int=>1)[cpp] [0=>1]
 ----
 
 ++++
@@ -2052,9 +1924,6 @@ The router supports a chain `fos:frame` structures and, in this way, `fos:frame`
 [source,mmadt]
 ----
 fhatos> 34.make_bigger(a=>plus(10))[plus(*a)]
-[ERROR] [/sys/router/] no mounted structure for make_bigger  
-[ERROR] [/sys/router/] no mounted structure for make_bigger  
-[ERROR] [/sys/router/] no mounted structure for make_bigger  
 ==>88
 ----
 
@@ -2253,9 +2122,6 @@ fhatos> true.[false=>0,true=>1]
 ==>true=>1
 >]
 fhatos> true.i?bool<=bool(_)[and(_,*<0>)]
-[ERROR] [/sys/router/] no mounted structure for true.i?dom=/mmadt/bool&dc=1,1&rng=/mmadt/bool&rc=1,1  
-[ERROR] [/sys/router/] no mounted structure for true.i?dom=/mmadt/bool&dc=1,1&rng=/mmadt/bool&rc=1,1  
-[ERROR] [/sys/router/] no mounted structure for true.i?dom=/mmadt/bool&dc=1,1&rng=/mmadt/bool&rc=1,1  
 [ERROR] [/mmadt/parser] noobj is not a lst as defined by [lst][_] 
 		 \_/mmadt/noobj is not a subtype of /mmadt/lst
 	  thrown at inst noobj => true.i(noobj)[and(_,from(0))] [0=>noobj]
@@ -2293,19 +2159,21 @@ person[[name=>'lili',age=>129]]
 [source,mmadt]
 ----
 fhatos> person -> |[name?str=>_,age?nat=>?<120]
-[ERROR] [/sys/router/] no mounted structure for person  
 >[
 ==>name?str=>_
 ==>age?nat=>is(lt(120))
 >]
 fhatos> person[[name=>'marko',age=>29]]
-[ERROR] [/sys/router/] no mounted structure for person  
-[ERROR] [/sys/router/] no mounted structure for person  
-[ERROR] [/mmadt/parser] person is an undefined type
+>person[
+==>name?str=>'marko'
+==>age?nat=>29
+>]
 fhatos> person[[name=>'lili',age=>129]]
-[ERROR] [/sys/router/] no mounted structure for person  
-[ERROR] [/sys/router/] no mounted structure for person  
-[ERROR] [/mmadt/parser] person is an undefined type
+[ERROR] [/mmadt/parser] noobj is not a nat as defined by nat()[is(gte(0))] 
+		 \_[ /mmadt/obj ]  /mmadt/gte?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved 
+	         lhs id      inst id       resolve obj                                       
+	  ->[/mmadt/obj] /mmadt/gte => gte?bool<=obj{?}()
+	  thrown at inst noobj => nat()[is(gte(0))] [=>]
 ----
 
 ++++
@@ -2729,18 +2597,17 @@ a -> age[45]
 [source,mmadt]
 ----
 fhatos> age -> |(is(gt(0)).is(lt(120)))
-[ERROR] [/sys/router/] no mounted structure for age  
 ==>is?noobj<=obj(gt?noobj<=obj(0)[noobj])[noobj].is?noobj<=obj(lt?noobj<=obj(120)[noobj])[noobj]
 fhatos> a -> age[45]
-[ERROR] [/sys/router/] no mounted structure for age  
-[ERROR] [/mmadt/parser] age is an undefined type
+[ERROR] [/mmadt/parser] 45 is not a age as defined by is(gt(0)).is(lt(120)) 
+		 \_[ /mmadt/obj ]  /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved 
+	         lhs id      inst id      resolve obj                                      
+	  ->[/mmadt/obj] /mmadt/gt => gt?bool<=obj{?}()
 fhatos> *a.inspect()
-[ERROR] [/sys/router/] no mounted structure for a  
 [ERROR] [ /mmadt/obj ]  /mmadt/inspect?dom=/mmadt/obj&dc=1,1&rng=/mmadt/rec&rc=1,1 inst unresolved 
 	         lhs id      inst id           resolve obj           
 	  ->[/mmadt/obj] /mmadt/inspect => inspect(_)
 fhatos> @a.inspect()
-[ERROR] [/sys/router/] no mounted structure for a  
 [ERROR] [ /mmadt/obj ]  /mmadt/inspect?dom=/mmadt/obj&dc=1,1&rng=/mmadt/rec&rc=1,1 inst unresolved 
 	         lhs id      inst id           resolve obj           
 	  ->[/mmadt/obj] /mmadt/inspect => inspect(_)
@@ -2759,26 +2626,32 @@ fhatos> @a.inspect()
 [source,mmadt]
 ----
 fhatos> a?sub -> |print(_)
-[ERROR] [/sys/router/] no mounted structure for a?sub  
 ==>print?noobj<=obj(_)[noobj]
 fhatos> a -> 12
-[ERROR] [/sys/router/] no mounted structure for a  
 ==>12
-fhatos> @a.inspect()
-[ERROR] [/sys/router/] no mounted structure for a  
-[ERROR] [ /mmadt/obj ]  /mmadt/inspect?dom=/mmadt/obj&dc=1,1&rng=/mmadt/rec&rc=1,1 inst unresolved 
-	         lhs id      inst id           resolve obj           
-	  ->[/mmadt/obj] /mmadt/inspect => inspect(_)
-fhatos> @a.plus(1)
-[ERROR] [/sys/router/] no mounted structure for a  
-[ERROR] [ /mmadt/obj ]  /mmadt/plus inst unresolved 
-	         lhs id      inst id        resolve obj        
-	  ->[/mmadt/obj] /mmadt/plus => plus(_)
-fhatos> @a.plus(1).plus(1)
-[ERROR] [/sys/router/] no mounted structure for a  
-[ERROR] [ /mmadt/obj ]  /mmadt/plus inst unresolved 
-	         lhs id      inst id        resolve obj        
-	  ->[/mmadt/obj] /mmadt/plus => plus(_)
+12fhatos> @a.inspect()
+>[
+==>type=>[
+===>id=>/mmadt/int
+===>obj=>[int][_]
+===>dom=>[id=>/mmadt/obj,coeff=>[1,1]]
+===>rng=>[id=>/mmadt/int,coeff=>[1,1]]
+=>]
+==>value=>[
+===>id=>a
+===>obj=>12
+===>encoding=>int32_t
+=>]
+==>sub=>[
+===>source=>/sys/scheduler
+===>pattern=>a
+===>on_recv=>print(_)
+=>]
+>]
+12@afhatos> @a.plus(1)
+==>13@a
+13@afhatos> @a.plus(1).plus(1)
+==>15@a
 ----
 
 ++++
@@ -2902,6 +2775,8 @@ fhatos> */sys/router/#/
 ===>/fos/#
 ===>/mmadt/#
 ===>/io/#
+===>+/#
+===>/fs/#
 =>]
 >]
 ----
@@ -2941,20 +2816,21 @@ a -> 'meangirl'            --- <5>
 [source,mmadt]
 ----
 fhatos> a -> 'snowbutt'            // <1>
-[ERROR] [/sys/router/] no mounted structure for a  
 ==>'snowbutt'
 fhatos> *a                         // <2>
-[ERROR] [/sys/router/] no mounted structure for a  
+==>'snowbutt'
 fhatos> a?sub -> |to(b)            // <3>
-[ERROR] [/sys/router/] no mounted structure for a?sub  
 ==>to?noobj<=obj(b)[noobj]
 fhatos> *a?sub                     // <4>
-[ERROR] [/sys/router/] no mounted structure for a?sub  
+>sub[
+==>source=>/sys/scheduler
+==>pattern=>a
+==>on_recv=>to(b)
+>]
 fhatos> a -> 'meangirl'            // <5>
-[ERROR] [/sys/router/] no mounted structure for a  
 ==>'meangirl'
 fhatos> *b                         // <6>
-[ERROR] [/sys/router/] no mounted structure for b  
+==>'meangirl'
 ----
 
 ++++
@@ -2999,11 +2875,10 @@ from(u)
 
 [source,mmadt]
 ----
-[ERROR] [/sys/router/] no mounted structure for u  
 fhatos> from(u)
-[ERROR] [/sys/router/] no mounted structure for u  
+==>'fhatos'
 fhatos> *u
-[ERROR] [/sys/router/] no mounted structure for u  
+==>'fhatos'
 ----
 
 ++++
@@ -3025,13 +2900,10 @@ o.to(u)
 [source,mmadt]
 ----
 fhatos> u -> o
-[ERROR] [/sys/router/] no mounted structure for u  
 ==>o
 fhatos> u.ref(o)
-[ERROR] [/sys/router/] no mounted structure for u  
 ==>o
 fhatos> o.to(u)
-[ERROR] [/sys/router/] no mounted structure for u  
 ==>o
 ----
 
@@ -3070,25 +2942,32 @@ a/a -> 1; a/b -> 2; a/b/c -> 3; a/b/d -> 4;
 [source,mmadt]
 ----
 fhatos> a/a -> 1; a/b -> 2; a/b/c -> 3; a/b/d -> 4;
-[ERROR] [/sys/router/] no mounted structure for a/a  
-[ERROR] [/sys/router/] no mounted structure for a/b  
-[ERROR] [/sys/router/] no mounted structure for a/b/c  
-[ERROR] [/sys/router/] no mounted structure for a/b/d  
-[ERROR] [/sys/router/] no mounted structure for a/b  
-[ERROR] [/sys/router/] no mounted structure for a/b/c  
-[ERROR] [/sys/router/] no mounted structure for a/b/d  
 fhatos> *a/b            // <1>
-[ERROR] [/sys/router/] no mounted structure for a/b  
+==>2
 fhatos> *a/b/           // <2>
-[ERROR] [/sys/router/] no mounted structure for a/b/  
+>[
+==>a/b=>2
+>]
 fhatos> *a/+            // <3>
-[ERROR] [/sys/router/] no mounted structure for a/+  
+==>1
+==>2
 fhatos> *a/+/           // <4>
-[ERROR] [/sys/router/] no mounted structure for a/+/  
+>[
+==>a/a=>1
+==>a/b=>2
+>]
 fhatos> *a/#            // <5>
-[ERROR] [/sys/router/] no mounted structure for a/#  
+==>1
+==>2
+==>3
+==>4
 fhatos> *a/#/           // <6>
-[ERROR] [/sys/router/] no mounted structure for a/#/  
+>[
+==>a/a=>1
+==>a/b=>2
+==>a/b/c=>3
+==>a/b/d=>4
+>]
 ----
 
 ++++
@@ -3158,15 +3037,13 @@ fhatos> abc?k1=v1,v2&k2=v3&k3=v4,v5,v6            // <2>
 fhatos> <abc?k1=v1,v2&k2=v3&k3=v4,v5,v6>          // <3>
 ==>abc?k1=v1,v2&k2=v3&k3=v4,v5,v6
 fhatos> <abc?k1=v1,v2&k2=v3&k3=v4,v5,v6> -> 12    // <4>
-[ERROR] [/sys/router/] no mounted structure for abc?k1=v1,v2&k2=v3&k3=v4,v5,v6  
 ==>12
 fhatos> *abc
-[ERROR] [/sys/router/] no mounted structure for abc  
+==>12
 fhatos> abc -> <abc?k1=v1,v2&k2=v3&k3=v4,v5,v6>   // <5>
-[ERROR] [/sys/router/] no mounted structure for abc  
 ==>abc?k1=v1,v2&k2=v3&k3=v4,v5,v6
 fhatos> *abc
-[ERROR] [/sys/router/] no mounted structure for abc  
+==>abc?k1=v1,v2&k2=v3&k3=v4,v5,v6
 ----
 
 ++++
@@ -3287,48 +3164,41 @@ m/2/3 -> 11
 ----
 fhatos> --- write matrix
 fhatos> m/0/0 -> 0
-[ERROR] [/sys/router/] no mounted structure for m/0/0  
 ==>0
 fhatos> m/0/1 -> 1
-[ERROR] [/sys/router/] no mounted structure for m/0/1  
 ==>1
 fhatos> m/0/2 -> 2
-[ERROR] [/sys/router/] no mounted structure for m/0/2  
 ==>2
 fhatos> m/0/3 -> 3
-[ERROR] [/sys/router/] no mounted structure for m/0/3  
 ==>3
 fhatos> m/1/0 -> 4
-[ERROR] [/sys/router/] no mounted structure for m/1/0  
 ==>4
 fhatos> m/1/1 -> 5
-[ERROR] [/sys/router/] no mounted structure for m/1/1  
 ==>5
 fhatos> m/1/2 -> 6
-[ERROR] [/sys/router/] no mounted structure for m/1/2  
 ==>6
 fhatos> m/1/3 -> 7
-[ERROR] [/sys/router/] no mounted structure for m/1/3  
 ==>7
 fhatos> m/2/0 -> 8
-[ERROR] [/sys/router/] no mounted structure for m/2/0  
 ==>8
 fhatos> m/2/1 -> 9
-[ERROR] [/sys/router/] no mounted structure for m/2/1  
 ==>9
 fhatos> m/2/2 -> 10
-[ERROR] [/sys/router/] no mounted structure for m/2/2  
 ==>10
 fhatos> m/2/3 -> 11
-[ERROR] [/sys/router/] no mounted structure for m/2/3  
 ==>11
 fhatos> --- read matrix
 fhatos> *m/0/0      // <1>
-[ERROR] [/sys/router/] no mounted structure for m/0/0  
+==>0
 fhatos> *m/0/+      // <2>
-[ERROR] [/sys/router/] no mounted structure for m/0/+  
+==>0
+==>1
+==>2
+==>3
 fhatos> *m/+/0      // <3>
-[ERROR] [/sys/router/] no mounted structure for m/+/0  
+==>0
+==>4
+==>8
 ----
 
 ++++
