lots of good doc infrastructure work. the set of esp processors supported dynamically generated from polatformio ini configuration. simplified inst evaluation with ROUTER_EXEC_WITHIN_FRAME which handles pushing and popping frames with all the cautions around exception handling and frame stack state corruption. tested wifi on esp32 through the boot loader. some nice tweaks to dsm and mqtt-client.

--- a/docs/fhatos_index.adoc
+++ b/docs/fhatos_index.adoc
@@ -9,7 +9,7 @@
 :stem: latexmath
 :source-highlighter: highlight.js
 :highlightjsdir: ./highlight
-:highlightjs-languages: mmadt, bash
+:highlightjs-languages: mmadt,bash,json
 :stylesheet: ./css/fhatos.css
 // :linkcss:
 :data-uri:
